<?xml version="1.0"?>
<package>
  <name>ipab_lwr_msgs</name>
  <version>1.0.0</version>
  <description>ROS message definitions for the KUKA LWR robot</description>

  <!-- TODO -->
  <maintainer email="wxm@todo.todo">wxm</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
